spacing fixes

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h3 {
   font-size: 30px;
 }
 
-h5 {
+h4 {
   font-family: "Cera Basic";
   font-size: 22px;
 }
@@ -66,8 +66,6 @@ h7 {
 p {
   font-family: "Cera Basic";
   font-size: 20px;
-  /*font-weight: normal;*/
-  /*color: #666d78;*/
 }
 
 placeholder {
@@ -269,7 +267,7 @@ button {
 }
 
 .bootstrap-grid {
-  padding: 105px 240px 150px 240px;
+  padding: 105px 240px 105px 240px;
   margin: 0 auto;
 }
 
@@ -282,9 +280,19 @@ button {
   top: 0;
 }
 
+.col {
+  max-width: 430px;
+}
+.bootstrap-grid .row {
+  margin-left: 40px;
+}
 .grid-text {
   position: relative;
   padding: 0px 0px 0px 60px;
+}
+
+.grid-text p {
+  font-size: 16px;
 }
 
 .stats {
